<resources>
    <string name="app_name">Denjoly</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chi_bepazi">نمیدونی چی بپزی؟؟</string>
    <string name="txt_description">پایین کلی غذای آسون و خوشمزه برات دارم</string>
    <string name="welcome">خوش اومدی</string>
    <string name="food_category">دسته بندی غذا ها</string>
    <string name="berim_pokhtopaz">بریم برا پخت و پز</string>
    <string name="txt_ingredients">مواد لازم:</string>
    <string name="txt_titleprepare">طرز نهیه</string>
    <string name="txt_titleingredients">مواد اولیه:</string>
    <string name="prepare">طرز تهیه:</string>
    <string name="make_shoppinglist">لیست خریدتو درست کن!</string>

    <string name="food">food</string>
    <string name="shoppinglist">لیست خرید</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"ثبت نام موفقیت آمیز نبود!!"</string>
    <string name="add_notehere">اینجا خریداتو یاداشت کن</string>
    <string name="add_successfully">added succssfully</string>
    <string name="didnot_add">not successfully</string>
    <string name="txt_favorites">علاقه مندی ها</string>
    <string name="unlike">food unlike</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="shopping_list">shopping list</string>
    <string name="todo">TODO</string>
    <string name="add_note">اضافه کردن یادداشت</string>
    <string name="save_buy">خریداتو یادداشت کن یادت نره</string>
    <string name="chi_bekhari">چی می خوای بخری؟</string>
    <string name="che_meghdar">چه مقدار؟</string>
    <string name="save_it">ذخیره کن</string>
    <string name="note_added">یادداشت اضافه شد</string>
    <string name="what_to_buy">چی؟</string>
    <string name="how_much">چه مقدار؟</string>
    <string name="note_here">همینجا یادداشت کن</string>
    <string name="txt_cancel">کنسل</string>
    <string name="fill_both">لطفا هر دو تا رو پر کن</string>
    <string name="contact_us">Contact me:</string>
    <string name="about_us">درباره ما</string>
    <string name="exit">خروج</string>
    <string name="email_title">آدرس ایمیل:</string>
    <string name="my_email">porya.sahraee@gmail.com</string>
    <string name="github_title">پروفایل گیت هاب:</string>
    <string name="github_address">https://github.com/porya1988</string>
    <string name="LinkedIn_title"> porya sahraee</string>
    <string name="my_name">porya sahraee</string>
    <string name="whatsapp_title">واتس آپ:</string>
    <string name="recepi">کلی رسپی تست شده اینجا هست</string>
    <string name="app_title">دنجولی</string>
    <string name="about">about</string>
    <string name="programmer_name">نام و نام خانوادگی برنامه نویس:</string>
    <string name="programmenr_name">پوریا صحرایی</string>
    <string name="email_add">آدرس ایمیل*</string>
    <string name="porya_sahraee">porya sahraee</string>
    <string name="txt_androidDeveloper">Android Developer</string>
    <string name="app_specification">App Specification:</string>
    <string name="mvp_artitecture">MVP Artitecture</string>
    <string name="retrofit">Retrofit</string>
    <string name="room_orm">Room ORM</string>
    <string name="picasso">Picasso</string>
    <string name="write_opinion">نظرتو بنویس:(اول فرم عضویت رو پر کن)</string>
    <string name="question_register">عضو هستی؟</string>
    <string name="username">نام کاربری</string>
    <string name="email_phone">ایمیل یا شماره تلفن همراه</string>
    <string name="enter">ورود</string>
    <string name="enter_with">با نام کاربری و رمز عبور خود وارد شوید.</string>
    <string name="enter_with_google">ورود با گوگل</string>
    <string name="forgot_password">رمز عبور خود را فراموش کرده اید؟</string>
    <string name="membership">عضویت</string>
    <string name="new_member">عضو جدید هستید؟</string>
    <string name="name">نام *</string>
    <string name="password">*رمز عبور</string>
    <string name="member_for_register">(اول باید عضو بشی!)</string>
    <string name="repeat_password">تکرار رمز عبور *</string>
    <string name="create_new_account">ایجاد اکانت جدید</string>
    <string name="family_name">نام خانوادگی *</string>
    <string name="filling_neccessary">پرکردن فیلده های مشخص شده با * الزامی است</string>
    <string name="hi">سلام</string>
    <string name="you_are_a_member">شما هم اکنون عضو هستید</string>
    <string name="fire_base">FireBase services</string>
    <string name="opinion">نظرتو اینجا برام بنویس:</string>
    <string name="error_occured">خطایی رخ داده است</string>
    <string name="signed_before">قبلا عضو شدید!!</string>
    <string name="enter_your_name">لطفا نام خود را وارد کنید!!</string>
    <string name="enter_your_family">\"لطفا نام خانوادگی را وارد کنید!! \"</string>
    <string name="enter_password">لطفا رمز عبور را وارد کنید!!</string>
    <string name="password_length">رمز عبور نباید کمتر از شش کاراکتر باشد!!</string>
    <string name="enter_email">لطفا ایمیل خود را وارد کنید!!</string>
    <string name="register_if_not">اگر عضو نیستی ثبت نام کن!!</string>
    <string name="Login">ورود</string>
    <string name="enter_app">ورود به برنامه</string>
    <string name="register">ثبت نام</string>
    <string name="login_successful">ورود موفقیت آمیز بود</string>
    <string name="sign_failed">ورود موفقیت آمیز نبود!!</string>
    <string name="email">ایمیل</string>
    <string name="password_starless">رمز عبور</string>
    <string name="txt_login">نظرتو بنویس، قبلش عضو شو</string>
    <string name="register_comment">ثبت نظر</string>
    <string name="comment_opinion">نظرتو اینجا بنویس</string>
    <string name="logg_for_register_opinion">برای نظر دادن قبلش باید عضو بشی</string>
    <string name="comment_added">نظر شما با موفقیت ثبت شد</string>
    <string name="comment_regestration_failed">ثبت نظر موفقیت آمیز نبود،دوباره امتحان کنید</string>

</resources>